--- a/FuzzStagingQuiz/FuzzStagingQuiz/Base.lproj/Main.storyboard
+++ b/FuzzStagingQuiz/FuzzStagingQuiz/Base.lproj/Main.storyboard
@@ -38,16 +38,16 @@
                                                     <color key="color" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                                 </activityIndicatorView>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EYp-1d-gHu">
-                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="140"/>
+                                                    <rect key="frame" x="0.0" y="8" width="600" height="132"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="140" id="u7I-Fe-wa1"/>
+                                                        <constraint firstAttribute="height" constant="132" id="u7I-Fe-wa1"/>
                                                     </constraints>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="SSj-fc-xCY" firstAttribute="trailing" secondItem="puI-BZ-HW7" secondAttribute="trailingMargin" id="3Qk-OD-enJ"/>
                                                 <constraint firstAttribute="centerX" secondItem="ogp-hy-nQC" secondAttribute="centerX" id="4rb-yM-gHS"/>
-                                                <constraint firstItem="EYp-1d-gHu" firstAttribute="top" secondItem="puI-BZ-HW7" secondAttribute="topMargin" constant="-8" id="8RC-X4-CIA"/>
+                                                <constraint firstItem="EYp-1d-gHu" firstAttribute="top" secondItem="puI-BZ-HW7" secondAttribute="topMargin" id="8RC-X4-CIA"/>
                                                 <constraint firstItem="SSj-fc-xCY" firstAttribute="top" secondItem="EYp-1d-gHu" secondAttribute="bottom" constant="-2" id="9ae-lP-oxW"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="SSj-fc-xCY" secondAttribute="bottom" constant="-7.5" id="nrj-tr-BrG"/>
                                                 <constraint firstItem="EYp-1d-gHu" firstAttribute="leading" secondItem="puI-BZ-HW7" secondAttribute="leadingMargin" constant="-8" id="nwH-vX-E4Z"/>
