--- a/FuzzStagingQuiz/FuzzStagingQuiz/Base.lproj/Main.storyboard
+++ b/FuzzStagingQuiz/FuzzStagingQuiz/Base.lproj/Main.storyboard
@@ -67,14 +67,14 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2sh-dx-wqU" id="dCO-S8-j1R">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wUj-bE-c5T">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wUj-bE-c5T">
                                                     <rect key="frame" x="8" y="8" width="584" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="02/02/2002" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sod-ux-gyb">
-                                                    <rect key="frame" x="504" y="28" width="88" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" text="02/02/2002" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sod-ux-gyb">
+                                                    <rect key="frame" x="504" y="27" width="88" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
@@ -85,7 +85,7 @@
                                                 <constraint firstItem="sod-ux-gyb" firstAttribute="bottom" secondItem="dCO-S8-j1R" secondAttribute="bottomMargin" id="7Lt-81-b49"/>
                                                 <constraint firstItem="sod-ux-gyb" firstAttribute="trailing" secondItem="dCO-S8-j1R" secondAttribute="trailingMargin" id="Ne3-e7-jun"/>
                                                 <constraint firstItem="wUj-bE-c5T" firstAttribute="leading" secondItem="dCO-S8-j1R" secondAttribute="leadingMargin" id="RKT-V2-6JB"/>
-                                                <constraint firstItem="sod-ux-gyb" firstAttribute="top" secondItem="wUj-bE-c5T" secondAttribute="bottom" constant="-1" id="aou-nW-fgA"/>
+                                                <constraint firstItem="sod-ux-gyb" firstAttribute="top" secondItem="wUj-bE-c5T" secondAttribute="bottom" constant="-2" id="aou-nW-fgA"/>
                                                 <constraint firstItem="wUj-bE-c5T" firstAttribute="top" secondItem="dCO-S8-j1R" secondAttribute="topMargin" id="kgT-2N-BIC"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -186,7 +186,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                 <items>
                                     <navigationItem title="Fuzz Productions" id="uYB-GM-vfV">
-                                        <barButtonItem key="leftBarButtonItem" title="Item" systemItem="stop" id="2MB-nK-P94">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="2MB-nK-P94">
                                             <connections>
                                                 <action selector="dismissButtonPressed:" destination="TII-m3-qTA" id="4aL-bm-STE"/>
                                             </connections>
